# irrigator

./: CMakeLists.txt  README.md  avr-gcc.cmake  gcc-avr.cmake  label.sh  test.sh
src/: main.c  trace.h
